--- a/Oster/Cube2.html
+++ b/Oster/Cube2.html
@@ -254,7 +254,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(228px, 218px) rotate(0deg);
 }
 /*#/#*//*#i8.i76.text.css:text/base/css*/
-#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Effra; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
 #i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 259px; height: 55px;
         -ms-transform: translate(0, 0) translate(21px, 184px) rotate(0deg);
@@ -328,7 +328,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i19.i78.text.css:text/base/css*/
-#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Effra; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i78.i79.positioning.css:positioning/base/css.2*/
 #i78 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 223px; height: 55px;
         -ms-transform: translate(0, 0) translate(39px, 182px) rotate(0deg);
@@ -420,7 +420,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(228px, 218px) rotate(0deg);
 }
 /*#/#*//*#i30.i142.text.css:text/base/css*/
-#i142 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Effra; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i142 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i142.i143.positioning.css:positioning/base/css.2*/
 #i142 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 182px; height: 55px;
         -ms-transform: translate(0, 0) translate(59px, 182px) rotate(0deg);
@@ -593,7 +593,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i8.i88.image.html:image/html-->
 <img id="i88" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i8.i76.text.html:text/html-->
-<div id="i76">Desde el 1 de Marzo al 15 de Mayo: ¡Gana con Oster!</div>
+<div id="i76">Desde el 1 de Marzo al 15 de Mayo, gana con Oster!</div>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/qUdbF9i.png"/>
 <!--#/#--><!--#i8.i102.shape.html:shape/html-->
@@ -731,7 +731,7 @@ var el = document.getElementById('i102');
 
 el.addEventListener('click', function(e){
     /*#i104.i105.actions-clicktag.js:actions-clicktag/base/js.2*/
- 
+   
 /*#/#*/
 });
 
@@ -795,7 +795,7 @@ var el = document.getElementById('i8');
 
 el.addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    
+   
 /*#/#*/
 });
 
@@ -826,7 +826,7 @@ var el = document.getElementById('i122');
 
 el.addEventListener('click', function(e){
     /*#i124.i125.actions-clicktag.js:actions-clicktag/base/js.2*/
-  
+   
 /*#/#*/
 });
 
@@ -1126,7 +1126,7 @@ customName: false;
 /*#/#*//*#i88.i89.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i8.i76.text.meta:text/meta*/
-name: Dede el 1 de Marzo al 15 de Mayo, ¡gana con Oster!; customName: false;
+name: Desde el 1 de Marzo al 15 de Mayo, ¡gana con Oster!; customName: false;
 /*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i152.image.meta:image/meta*/
@@ -1248,7 +1248,7 @@ name: Background;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i80.text.meta:text/meta*/
-name: ¿Cuanto sabes de mamas? Prueba tus conocimientos y gana.; customName: false;
+name: ¿Cuánto sabes de mamás? Prueba tus conocimientos y gana.; customName: false;
 /*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i41.i94.image.meta:image/meta*/
