--- a/Oster/Cube2.html
+++ b/Oster/Cube2.html
@@ -593,7 +593,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i8.i88.image.html:image/html-->
 <img id="i88" src="https://i.imgur.com/h23KF8O.png"/>
 <!--#/#--><!--#i8.i76.text.html:text/html-->
-<div id="i76">Desde el 1 de Marzo al 15 de Mayo, gana con Oster!</div>
+<div id="i76">Desde el 1 de Marzo al 15 de Mayo, !gana con Oster!</div>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/qUdbF9i.png"/>
 <!--#/#--><!--#i8.i102.shape.html:shape/html-->
