--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -11,10 +11,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#head:common/head-->
 <!--#flexGallery.head:flexGallery/globalhead-->
 <script src="//s1.adform.net/banners/scripts/components/Adform.FlexGallery-1.js"></script>
-<!--#/#--><!--#i2.font-google.head:font/font-google/head-->
-<!--#i2.i3.font-google.head:font-google/head-->
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i' rel='stylesheet' type='text/css'>
-<!--#/#-->
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
@@ -245,22 +241,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i8.i76.text.css:text/base/css*/
-#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #363535; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i76 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #565656; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i76.i77.positioning.css:positioning/base/css.2*/
-#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 220px; height: 55px;
-        -ms-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 182px) rotate(0deg);
-}
-/*#/#*//*#i8.i192.text.css:text/base/css*/
-#i192 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 18px; color: #ff477e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i192.i193.positioning.css:positioning/base/css.2*/
-#i192 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 46px; height: 24px;
-        -ms-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
-        transform: translate(0, 0) translate(186px, 181px) rotate(0deg);
+#i76 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 250px; height: 16px;
+        -ms-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
+        transform: translate(0, 0) translate(24px, 176px) rotate(0deg);
 }
 /*#/#*//*#i8.i152.image.css:image/base/css*/
 #i152 { opacity: 1; }
@@ -275,10 +262,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i106 { opacity: 1; }
 /*#/#*//*#i106.i107.positioning.css:positioning/base/css.2*/
 #i106 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 37px;
-        -ms-transform: translate(0, 0) translate(79px, 143px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(79px, 143px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(79px, 143px) rotate(0deg);
-        transform: translate(0, 0) translate(79px, 143px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(77px, 142px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 142px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 142px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 142px) rotate(0deg);
 }
 /*#/#*//*#i8.i102.shape.css:shape/base/css*/
 #i102 { background-color: #dedede; opacity: 0.00;
@@ -317,6 +304,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 220px) rotate(0deg);
 }
+/*#/#*//*#i8.i200.text.css:text/base/css*/
+#i200 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 16px; color: #eb9baf; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i200.i201.positioning.css:positioning/base/css.2*/
+#i200 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 199px; height: 40px;
+        -ms-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
+        transform: translate(0, 0) translate(50px, 195px) rotate(0deg);
+}
 /*#/#*//*#i19.i20.shape.css:shape/base/css*/
 #i20 { background-color: #ffffff; opacity: 1;
 }
@@ -337,7 +333,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i19.i78.text.css:text/base/css*/
-#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #3d3d3d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 16px; color: #565656; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i78.i79.positioning.css:positioning/base/css.2*/
 #i78 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 259px; height: 55px;
         -ms-transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
@@ -467,7 +463,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i41.i80.text.css:text/base/css*/
-#i80 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibri; font-size: 17px; color: #4d4d4d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i80 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 16px; color: #565656; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i80.i81.positioning.css:positioning/base/css.2*/
 #i80 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 251px; height: 55px;
         -ms-transform: translate(0, 0) translate(26px, 182px) rotate(0deg);
@@ -546,13 +542,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i190.font-local.css:font/font-local/css*/
-/*#i190.i191.font-local.css:font-local/css.1*/
+/*#/#*//*#i198.font-local.css:font/font-local/css*/
+/*#i198.i199.font-local.css:font-local/css.1*/
 @font-face {
-font-family: 'calibri';
+font-family: 'Anglecia-Pro-Title-W01-Bold_1';
 src: url('fonts/');
 src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/calibri.woff') format('woff'),
+url('fonts/Anglecia-Pro-Title-W01-Bold_1.woff') format('woff'),
 url('fonts/') format('truetype'),
 url('fonts/') format('opentype'),
 url('fonts/') format('svg');
@@ -562,8 +558,7 @@ url('fonts/') format('svg');
 </style>
 <!--#/#--></head>
 <body>
-<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i2.font.html:font/html-->
-<!--#/#--><!--#i4.cube.html:cube/html.4-->
+<!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i4.cube.html:cube/html.4-->
 <div id="i4" class="adf-FlexGallery">
     <div class="adf-Shape">
         <!--#i4.i8.cube-panel.html:cube-panel/html.1-->
@@ -573,9 +568,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i8.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/zV2gv6q.jpg"/>
 <!--#/#--><!--#i8.i76.text.html:text/html-->
-<div id="i76">In Rácket, ask for “              Puerto and tonic, por favor”</div>
-<!--#/#--><!--#i8.i192.text.html:text/html-->
-<div id="i192">a Pink</div>
+<div id="i76">In Rácket, ask for</div>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i8.i106.image.html:image/html-->
@@ -588,6 +581,8 @@ url('fonts/') format('svg');
 <img id="i172" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i8.i176.image.html:image/html-->
 <img id="i176" src="https://i.imgur.com/YN2Vf5g.png"/>
+<!--#/#--><!--#i8.i200.text.html:text/html-->
+<div id="i200">“a Pink Puerto and tonic, por favor”</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -654,7 +649,7 @@ url('fonts/') format('svg');
     </div>
 </div>
 <!--#/#--><!--#i7.flexGallery.html:flexGallery/html-->
-<!--#/#--><!--#i190.font.html:font/html-->
+<!--#/#--><!--#i198.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i4.cube.js:cube/js.4*/
@@ -692,8 +687,6 @@ bmShow('i9');
 bmShow('i60');
 /*#/#*//*#i76.i77.positioning.js:positioning/base/js.2*/
 bmShow('i76');
-/*#/#*//*#i192.i193.positioning.js:positioning/base/js.2*/
-bmShow('i192');
 /*#/#*//*#i8.i152.image.js:image/base/js*/
 
 /*#/#*//*#i152.i153.positioning.js:positioning/base/js.2*/
@@ -777,6 +770,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i200.i201.positioning.js:positioning/base/js.2*/
+bmShow('i200');
 /*#/#*//*#i8.i52.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i8');
@@ -884,7 +879,6 @@ if ('click' === 'click') {
 /*#/#*//*#i19.i54.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i19');
-
 
 
 if ('click' === 'click') {
@@ -1084,11 +1078,7 @@ function bmHide(id) {
 }
 /*#/#*/
 </script>
-<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i2.font.meta:font/meta*/
-name: Web Font: Source Sans Pro; type: font-google; customName: ;
-/*#/#*//*#i2.i3.font-google.meta:font-google/meta*/
-family: Source Sans Pro;
-/*#/#*//*#i4.cube.meta:cube/meta.4*/
+<!--#/#--><!--#meta:common/meta--><!--/*#i1.core.meta:core/meta*/version: 2;/*#/#*//*#i4.cube.meta:cube/meta.4*/
 name: Cube;
 customName: 1;
 data: /*!*/{"mode":"advanced"}/*!*/;
@@ -1104,12 +1094,8 @@ customName: false;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i8.i76.text.meta:text/meta*/
-name: In Rácket, ask for “              Puerto and tonic, por favor”; customName: false;
+name: In Rácket, ask for; customName: false;
 /*#/#*//*#i76.i77.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i8.i192.text.meta:text/meta*/
-name: a Pink; customName: false;
-/*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i8.i152.image.meta:image/meta*/
 name: AqxeEoY.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -1140,6 +1126,10 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i176.i177.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i8.i200.text.meta:text/meta*/
+name: “a Pink Puerto and tonic, por favor”; customName: false;
+/*#/#*//*#i200.i201.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i19.cube-panel.meta:cube-panel/meta.1*/
     name: Cube Panel 2;
 /*#/#*//*#i19.i20.shape.meta:shape/meta*/
@@ -1260,6 +1250,6 @@ customName: false;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i5.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i190.font.meta:font/meta*/
-name: Web Font: calibri; type: font-local; customName: ;
+/*#/#*//*#i198.font.meta:font/meta*/
+name: Web Font: Anglecia-Pro-Title-W01-Bold_1; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
