--- a/Puerto de Indias/Venetian.html
+++ b/Puerto de Indias/Venetian.html
@@ -2154,36 +2154,36 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 330px; height: 124px;
-        -ms-transform: translate(0, 0) translate(-5px, 365px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-5px, 365px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-5px, 365px) rotate(0deg);
-        transform: translate(0, 0) translate(-5px, 365px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 362px; height: 136px;
+        -ms-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
+        transform: translate(0, 0) translate(-21px, 353px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 40px;
-        -ms-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
-        transform: translate(0, 0) translate(88px, 353px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 130px; height: 35px;
+        -ms-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
+        transform: translate(0, 0) translate(101px, 418px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibrib; font-size: 26px; color: #4a4949; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 25px; color: #565656; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 78px;
-        -ms-transform: translate(0, 0) translate(20px, 275px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 275px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 275px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 275px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 245px; height: 27px;
+        -ms-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
+        transform: translate(0, 0) translate(37px, 269px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 50px; height: 50px;
-        -ms-transform: translate(0, 0) translate(257px, 427px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(257px, 427px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(257px, 427px) rotate(0deg);
-        transform: translate(0, 0) translate(257px, 427px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 40px;
+        -ms-transform: translate(0, 0) translate(271px, 436px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(271px, 436px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(271px, 436px) rotate(0deg);
+        transform: translate(0, 0) translate(271px, 436px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2259,16 +2259,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i73 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
-#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 23.75%;
-        -ms-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 365px) rotate(0deg);
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 25.833333333333332%;
+        -ms-transform: translate(0, 0) translate(0px, 353px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 353px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 353px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 353px) rotate(0deg);
 }
 /*#/#*//*#i79.image.css:image/base/css*/
 #i79 { opacity: 1; }
 /*#/#*//*#i79.i80.positioning.css:positioning/base/css.2*/
-#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+#i79 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
         -ms-transform: translate(0, 0) translate(9px, 453px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(9px, 453px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(9px, 453px) rotate(0deg);
@@ -2277,7 +2277,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i81.image.css:image/base/css*/
 #i81 { opacity: 1; }
 /*#/#*//*#i81.i82.positioning.css:positioning/base/css.2*/
-#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 23px;
+#i81 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
         -ms-transform: translate(0, 0) translate(37px, 453px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(37px, 453px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(37px, 453px) rotate(0deg);
@@ -2286,41 +2286,41 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i83.image.css:image/base/css*/
 #i83 { opacity: 1; }
 /*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
-#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 21px; height: 21px;
         -ms-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
 }
-/*#/#*//*#i97.font-local.css:font/font-local/css*/
-/*#i97.i98.font-local.css:font-local/css.1*/
+/*#/#*//*#i101.image.css:image/base/css*/
+#i101 { opacity: 1; }
+/*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
+#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 54px;
+        -ms-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
+        transform: translate(0, 0) translate(138px, 370px) rotate(0deg);
+}
+/*#/#*//*#i103.font-local.css:font/font-local/css*/
+/*#i103.i104.font-local.css:font-local/css.1*/
 @font-face {
-font-family: 'calibrib';
+font-family: 'Anglecia-Pro-Title-W01-Bold_1';
 src: url('fonts/');
 src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/calibrib.woff') format('woff'),
+url('fonts/Anglecia-Pro-Title-W01-Bold_1.woff') format('woff'),
 url('fonts/') format('truetype'),
 url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
-/*#/#*//*#i99.text.css:text/base/css*/
-#i99 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: calibrib; font-size: 27px; color: #ff477e; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i99.i100.positioning.css:positioning/base/css.2*/
-#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 24px;
-        -ms-transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
-        transform: translate(0, 0) translate(223px, 273px) rotate(0deg);
-}
-/*#/#*//*#i101.image.css:image/base/css*/
-#i101 { opacity: 1; }
-/*#/#*//*#i101.i102.positioning.css:positioning/base/css.2*/
-#i101 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 35px; height: 54px;
-        -ms-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
-        transform: translate(0, 0) translate(134px, 386px) rotate(0deg);
+/*#/#*//*#i105.text.css:text/base/css*/
+#i105 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 24px; color: #eb9baf; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
+#i105 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 228px; height: 81px;
+        -ms-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
+        transform: translate(0, 0) translate(47px, 294px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2343,8 +2343,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/UhmS6ks.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">In Rácket, ask for “                    Puerto and tonic, 
-por favor”</div>
+<div id="i63">In Rácket, ask for</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
@@ -2357,11 +2356,11 @@ por favor”</div>
 <img id="i81" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/YN2Vf5g.png"/>
-<!--#/#--><!--#i97.font.html:font/html-->
-<!--#/#--><!--#i99.text.html:text/html-->
-<div id="i99">a pink</div>
 <!--#/#--><!--#i101.image.html:image/html-->
 <img id="i101" src="https://i.imgur.com/0p6NYkv.png"/>
+<!--#/#--><!--#i103.font.html:font/html-->
+<!--#/#--><!--#i105.text.html:text/html-->
+<div id="i105">“a Pink Puerto and tonic, por favor”</div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2518,12 +2517,12 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i99.i100.positioning.js:positioning/base/js.2*/
-bmShow('i99');
 /*#/#*//*#i101.image.js:image/base/js*/
 
 /*#/#*//*#i101.i102.positioning.js:positioning/base/js.2*/
 bmShow('i101');
+/*#/#*//*#i105.i106.positioning.js:positioning/base/js.2*/
+bmShow('i105');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2563,7 +2562,7 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: In Rácket, ask for “                    Puerto and tonic,  por favor”; customName: false;
+name: In Rácket, ask for; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
@@ -2594,15 +2593,15 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i97.font.meta:font/meta*/
-name: Web Font: calibrib; type: font-local; customName: ;
-/*#/#*//*#i99.text.meta:text/meta*/
-name: a pink; customName: false;
-/*#/#*//*#i99.i100.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i101.image.meta:image/meta*/
 name: 0p6NYkv.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i101.i102.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i103.font.meta:font/meta*/
+name: Web Font: Anglecia-Pro-Title-W01-Bold_1; type: font-local; customName: ;
+/*#/#*//*#i105.text.meta:text/meta*/
+name: “a Pink Puerto and tonic, por favor”; customName: false;
+/*#/#*//*#i105.i106.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
